--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -11,9 +11,23 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
 	margin: 1rem 0;
 }
 
+a:link, a:active, a:visited {
+	color: #000;
+}
+
+.invert a:link, .invert a:active, .invert a:visited {
+	color: #fff;
+}
+
 .invert {
 	background-color: #000;
 	color: #fff;
+}
+
+.abovefold {
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 .site-header {
@@ -62,31 +76,41 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
 	opacity: 0.6;
 }
 
-.homepage-abovefold {
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-}
-
 .button {
 	font-family: 'Montserrat', sans-serif;
-	text-transform: uppercase;
 	display: inline-block;
-	background: #000;
-	color: #fff;
 	border: none;
-	padding: 0.5rem;
 	cursor: pointer;
 	text-decoration: none;
 	text-align: center;
 }
 
-.button.big-button {
+.default-button {
+	text-transform: uppercase;
+	background: #000;
+	color: #fff;
+	padding: 0.5rem;
+}
+
+.invert .default-button {
+	background: #fff;
+	color: #000;
+}
+
+.link-button {
+	display: inline;
+	border-bottom: 3px solid rgba(0,0,0,0.2);
+}
+
+.big-button {
 	font-size: 1.15rem;
+}
+
+.default-button.big-button {
 	padding: 1rem;
 }
 
-.button.block-button {
+.block-button {
 	display: block;
 	margin: 1rem 0;
 }
@@ -95,11 +119,43 @@ h1, h2, h3, h4, h5, h6, p, ul, ol {
 	cursor: default;
 }
 
-.invert .button {
-	background: #fff;
-	color: #000;
+.lesson {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	padding: 0 1rem 1rem;
 }
 
-.homepage-belowfold {
-	padding: 0 1rem 1rem;
+.lesson-title-card {
+	flex: 1;
+	padding: 3rem 1rem 0;
+	background-color: #F3F3F3;
+	display: flex;
+	flex-direction: column;
+}
+
+.lesson-title-card-content {
+	flex: 1;
+}
+
+.lesson-title-card-bar {
+	flex: 0;
+	padding: 0 0 1rem;
+	text-align: right;
+}
+
+.lesson-title-detail {
+	font-family: 'Montserrat', sans-serif;
+	text-transform: uppercase;
+	font-size: 1rem;
+	font-weight: 400;
+	opacity: 0.6;
+	margin-bottom: 0.5rem;
+}
+
+.lesson-title-text {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 2.5rem;
+	font-weight: 400;
+	margin-top: 0;
 }
