--- a/src/public/assets/css/style.css
+++ b/src/public/assets/css/style.css
@@ -80,6 +80,33 @@ a:link, a:active, a:visited {
 	opacity: 0.6;
 }
 
+.profiles {
+	margin: 1rem;
+}
+
+.profile {
+	width: 128px;
+	height: 128px;
+	margin: 1rem;
+	border-radius: 50%;
+	filter: grayscale(100%) brightness(100%);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	cursor: pointer;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+.profile:hover {
+	filter: grayscale(0%) brightness(100%);
+	transform: translateY(-7px);
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+/*.profile:active {
+	filter: grayscale(25%) brightness(80%);
+	transform: translateY(2px);
+	box-shadow: 0 0 15px rgba(0,0,0,0.5);
+}*/
+
 .button {
 	font-family: 'Montserrat', sans-serif;
 	display: inline-block;
